Refactor `SystemPerformanceTest` by removing redundant `getTimeoutSeconds`, simplifying exception handling, and improving test readability.